--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,23 +1,27 @@
 @layer reset, base, tokens, recipes, utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: #0a0a0a;
+        --foreground: #ededed;
+    }
 }
 
 html,
 body {
-  max-width: 100vw;
-  /*overflow-x: hidden;*/
+    max-width: 100vw;
+    /*overflow-x: hidden;*/
+}
+
+input:focus {
+    outline: none;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
