--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,17 @@
     }
 }
 
+
 html,
 body {
     max-width: 100vw;
     /*overflow-x: hidden;*/
+    -ms-overflow-style: none;
+
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 input:focus {
