[FEAT] 공통 처리, 햅틱 브릿지 개발

--- a/src/components/marker.scss
+++ b/src/components/marker.scss
@@ -13,7 +13,7 @@
 }
 
 .custom-marker {
-  animation: customDrop 0.8s ease-out forwards;
+  animation: customDrop 0.8s ease-out;
   position: relative;
   z-index: -1;
 }
