[FEAT] 리뷰 , 장소등록

--- a/src/components/marker.scss
+++ b/src/components/marker.scss
@@ -13,7 +13,9 @@
 }
 
 .custom-marker {
-  animation: customDrop 0.8s ease-out;
+  animation: customDrop 0.8s ease-out 1;
+  animation-fill-mode: forwards;
+
   position: relative;
-  z-index: -1;
+  z-index: 100;
 }
