--- a/src/components/marker.scss
+++ b/src/components/marker.scss
@@ -1,10 +1,10 @@
 @keyframes customDrop {
   0% {
-    transform: translateY(-100px);
+    transform: translateY(-30px);
     opacity: 0;
   }
   80% {
-    transform: translateY(10px);
+    transform: translateY(5px);
     opacity: 1;
   }
   100% {
@@ -13,9 +13,7 @@
 }
 
 .custom-marker {
-  animation: customDrop 0.8s ease-out 1;
-  animation-fill-mode: forwards;
-
+  animation: customDrop 0.3s ease-out;
   position: relative;
   z-index: 100;
 }
